--- a/beauty-flow/index.html
+++ b/beauty-flow/index.html
@@ -6,9 +6,12 @@
     <title>Saloneo - Plateforme de gestion moderne pour salons de beauté</title>
     <meta name="description" content="Saloneo - Solution complète de gestion pour salons de beauté. Gérez vos clients, rendez-vous, équipe et services en toute simplicité.">
     <meta name="keywords" content="salon beauté, gestion salon, rendez-vous, coiffure, esthétique, saloneo">
-    <link rel="icon" type="image/svg+xml" href="/saloneo-favicon.svg" />
-    <link rel="apple-touch-icon" href="/saloneo-icon-192.png" />
-    <meta name="theme-color" content="#6366F1" />
+    <!-- Favicon - Icône Saloneo -->
+    <link rel="icon" type="image/webp" href="/images/logos/Salonéo Logo - Icon.webp" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/logos/Salonéo Logo - Icon.webp" />
+    <link rel="icon" type="image/webp" sizes="32x32" href="/images/logos/Salonéo Logo - Icon.webp" />
+    <link rel="icon" type="image/webp" sizes="16x16" href="/images/logos/Salonéo Logo - Icon.webp" />
+    <meta name="theme-color" content="#FF6B35" />
   </head>
   <body>
     <div id="root"></div>
